tests/rename/should_fail/T14032f.stderr

T14032f.hs:9:14: error: [GHC-44432]
    The fixity signature for ‘$’ lacks an accompanying binding
    Suggested fix:
      Move the fixity signature to the declaration site of ‘$’.

T14032f.hs:10:14: error: [GHC-44432]
    The fixity signature for ‘$$’ lacks an accompanying binding
    Suggested fix:
      Move the fixity signature to the declaration site of ‘$$’.
